tests/invalid/set_builtin_wrong_arg_count/main.py
def run_case() -> None:
    s: set[int] = set({1, 2})


if __name__ == "__main__":
    run_case()
